--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,4 @@
-<h1>Welcome!</h1>
-<p>We are doing amazing things!</p>
+<div class="container">
+  <h1>Welcome!</h1>
+  <p>We are doing amazing things!</p>
+</div>
